--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
   "dependencies": {
     "include-media": "^1.4.9",
     "jquery": "^3.3.1",
-    "normalize.css": "^5.0.0"
+    "jquery-youtube-background": "^1.0.0",
+    "normalize.css": "^5.0.0",
+    "swiper": "^4.4.6"
   }
 }
